# libcuckoo

./: .gitignore  CMakeLists.txt  Makefile  analyse_fasta_results.py  analyse_results.py  compile.sh  compile_fasta_benchmark.sh  compile_universal_benchmark.sh  results.txt  run_fasta_aware_tests.py  run_fasta_tests.py  run_hashtable_tests.py  run_ht_aware_test.py  run_ht_aware_test_old.py  run_test1.py  run_test2.py  run_test3.py  run_test4.py  run_tests.sh  run_universal_benchmark.sh
fasta_results/2017-12-11_16:32:21/: folklore_144_threads.txt  folklore_15_threads.txt  folklore_1_threads.txt  folklore_29_threads.txt  folklore_43_threads.txt  folklore_57_threads.txt  folklore_72_threads.txt  hopscotch_144_threads.txt  hopscotch_15_threads.txt  hopscotch_1_threads.txt  hopscotch_29_threads.txt  hopscotch_43_threads.txt  hopscotch_57_threads.txt  hopscotch_72_threads.txt  libcuckoo_144_threads.txt  libcuckoo_15_threads.txt  libcuckoo_1_threads.txt  libcuckoo_29_threads.txt  libcuckoo_43_threads.txt  libcuckoo_57_threads.txt  libcuckoo_72_threads.txt  ndhash_144_threads.txt  ndhash_15_threads.txt  ndhash_1_threads.txt  ndhash_29_threads.txt  ndhash_43_threads.txt  ndhash_57_threads.txt  ndhash_72_threads.txt
fasta_results/2017-12-11_17:14:42/: folklore_144_threads.txt  folklore_15_threads.txt  folklore_1_threads.txt  folklore_22_threads.txt  folklore_29_threads.txt  folklore_36_threads.txt  folklore_43_threads.txt  folklore_50_threads.txt  (+40 more)
tests/: CMakeLists.txt
tests/fasta-kmer-benchmark/: CMakeLists.txt  README.md  kmer_benchmark.cc  universal_table_wrapper.hh
(+867 files in other folders)
